# binance

./: .env.example  .env.live-shadow.example  .env.live.example  .env.paper.example  .env.secrets.example  .gitignore  AGENTS.md  ARCHITECTURE_TODO.md  Dockerfile  README.md  TODO.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  test-lw-time.js  tsconfig.json  vite.config.js  vite.config.mjs  vitest.config.ts
config/: precision.json
docker/: Dockerfile.bot  Dockerfile.ws
docs/: INSTITUTIONAL_AUDIT_2026-05.md  PAPER_TRADING.md  binance-usdm-perpetual-reference.md  live-trading-prerequisites.md  nanopine-gap-matrix.md  self-learning-architecture.md  sol-1p5-smc-strategy.md
gateway/: ws-server.ts
logs/: app.ndjson
mcp-server/: Dockerfile  README.md  SYSTEM_PROMPT.md  crypto_exchange_mcp.py  pyproject.toml  query_tool.py  requirements.txt
mcp-server/tests/: conftest.py  test_helpers.py
ml_bot/: Dockerfile  README.md  config.py  drift_detector.py  export_onnx.py  inference_server.py  label_builder.py  main.py  model_registry.py  requirements.txt  retrain_scheduler.py  train.py
paper/: equity.jsonl  wallet.json
pnl-dashboard/: README.md  prometheus.yml
postman/: binance-futures-data.postman_collection.json
prometheus/: prometheus.yml
scripts/: binance-fapi-ws-status.ts  binance-live-readiness.ts  func-to-arrow-codemod.ts  futures-ltp-rest.ts  futures-ltp-ws.ts  get-all-tick-sizes.ts  get-current-precision.ts  replay.ts  reset-paper-state.sh  stack-auto.sh  stack-reset.sh  sync-paper-to-postgres.ts  ws-ltp-solusdt.ts
(+427 files in other folders)
