[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-exchange-mcp"
version = "0.1.0"
description = "MCP server exposing Binance and CoinDCX public market data (REST + WebSocket)."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "trading-workspace" }]
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "websockets>=12.0",
    "python-socketio[asyncio_client]>=5.11",
]

[project.scripts]
crypto-exchange-mcp = "crypto_exchange_mcp:main"

[tool.setuptools]
py-modules = ["crypto_exchange_mcp"]
